# cpp--

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build_onnx.ps1  paper-version-1.txt  paper.txt  readme.txt  run_cam_full_profile_capture.ps1  run_cam_mock_safe.cmd  run_cam_onnx_live_target.ps1  run_onnx.ps1  run_tracker_commands.txt  run_tracker_py310.bat  run_tracker_stage1_onnx_py310.bat  start.bat  实现.txt  论文思路.md
config/: tracker.yaml  tracker_cam_live_paper.yaml  tracker_cam_live_target_paper.yaml  tracker_cam_mock_paper.yaml  tracker_cam_mock_temporal_live.yaml  tracker_cam_pyusb_temporal_test.yaml  tracker_collect_nn.yaml  tracker_replay_base.yaml  tracker_replay_nogate.yaml  tracker_replay_noslew.yaml  tracker_replay_paper.yaml  tracker_replay_smoothed.yaml  tracker_train_full.yaml
data/: plot.py  readme.txt  test.txt
data/train/: plot.py  readme.txt  stats.json  train_history.json  train_summary.json
imu+detec/imu/: CMakeLists.txt  mpu6050_ekf_realtime.cpp  serial_logger.cpp
include/actuator/: motor_driver.h  motor_driver_mock.h  motor_driver_pyusb.h
include/app/: tracker_node.h
include/control/: controller.h  pid.h  slew_limiter.h  target_selector.h  temporal_compensator_onnx.h
include/core/: config.h  logger.h  time_utils.h  types.h
include/filter/: pnr_imm_kf.h
include/tracking/: hungarian.h  kalman_bbox.h  multi_object_tracker.h  track.h
include/vision/: bbox_utils.h  camera_capture.h  cv_compat.h  shm_detection_reader.h  yolo_detector.h
paper/tex-bib/: stage1_dual_state_sci_cn.tex  stage1_refs.bib
paper/仪器与测量汇刊/new/: tim_stage1_dual_state_cn.tex  tim_stage1_refs.bib
paper/仪器与测量汇刊/new2/: final_paper_results.json  generate_prediction_figures.py  main-1.tex  main.bib  readme.txt  revised_main.tex  rewritten_main_v2.tex
paper/仪器与测量汇刊/new2/data/: extract_real_data.py  generate_data.py
paper/仪器与测量汇刊/new2/picture/: fig3_model_architecture.drawio  fig3_model_architecture.vsdx  main.tex  render_framework2.py  table1_dataset.tex  方法总体框架-1.drawio  (+4 more)
src/: main.cpp  rout.md
src/actuator/: motor_driver.cpp  motor_driver_mock.cpp  motor_driver_pyusb.cpp
src/app/: tracker_node.cpp
src/control/: controller.cpp  pid.cpp  slew_limiter.cpp  target_selector.cpp  temporal_compensator_onnx.cpp
src/core/: config.cpp  logger.cpp  time_utils.cpp
src/filter/: pnr_imm_kf.cpp
src/tracking/: hungarian.cpp  kalman_bbox.cpp  multi_object_tracker.cpp  track.cpp
src/vision/: bbox_utils.cpp  camera_capture.cpp  shm_detection_reader.cpp  yolo_detector.cpp
tools/: _inspect_ckpt.py  benchmark_pipeline.py  compute_event_metrics.py  compute_run_metrics.py  eval_logs.py  extract_positive_segments.py  motor_usb_bridge.py  plot_logs.py  show_control_data.py  summarize_table_iv.py  summarize_table_v.py  summarize_table_vii.py  yolo_shm_server.py
模型-new2/: README.md  evaluate.py  evaluate_ablations.py  example_pipeline.py  export_paper_figures.py  fusion.py  generate_figures.py  generate_fusion_details.py  generate_structure_diagrams.py  generate_tables.py  generate_time_series.py  loss.py  plot_curves.py  plot_results.py  prepare_data.py  run_experiments.py  run_paper_experiments.py  train.py
模型-new2/checkpoints/: causal_cnn_gru.onnx  stats.json  train_history.json  train_summary.json
模型-new2/checkpoints/backup_20260413_132924/: causal_cnn_gru.onnx  stats.json
模型-new2/checkpoints/backup_multiseg_20260413_143237/: causal_cnn_gru.onnx  stats.json  train_history.json  train_summary.json
模型-new2/checkpoints/backup_retrain_20260413_135749/: causal_cnn_gru.onnx  train_history.json  train_summary.json
模型-new2/configs/: ablation_w3.yaml  default.yaml
模型-new2/models/: ablation_variants.py  baselines.py  cabrc.py  causal_cnn_gru.py  dscgnet.py  gru_baseline.py  lstm_baseline.py  mlp_baseline.py
模型-new2/smoke_checkpoints/: causal_cnn_gru.onnx  stats.json  train_history.json  train_summary.json
模型-new2/smoke_checkpoints_multi/: causal_cnn_gru.onnx  stats.json  train_history.json  train_summary.json
神经网络模块/: README.md  audit_augmented_dataset.py  build_dataset.py  build_dataset_legacy_backup.py  build_maneuver_success_template_analysis.py  build_next_capture_tasks.py  build_paper_results_blocks.py  build_pseudo_expert_batch.py  build_pseudo_expert_from_full_log.py  build_scenario_capture_guidance.py  build_scenario_capture_success_rate.py  build_scenario_failure_breakdown.py  build_scenario_repeat_coverage_status.py  build_target_presentation_contrast_report.py  build_target_presentation_success_profile.py  collect_and_eval.bat  compare_metrics.py  compare_pseudo_expert_variants.py  data_utils.py  evaluate_log.py  export_onnx.py  export_onnx_legacy_backup.py  gru_residual.py  infer_onnx.py  model.py  refresh_full_collection_progress.py  refresh_training_readiness.py  requirements.txt  run_formal_training_matrix.py  summarize_full_collection_progress_by_scenario.py  train.py  train_nce.py  train_pipeline.bat
神经网络模块-最新版/: STAGE1_RUNBOOK.txt  eval_stage1_clean.py  export_stage1_onnx.py  la_cspc_ornet_method_and_experiments_zh.md  run_stage1_after_ready.ps1  train_stage1_clean.py
神经网络模块-最新版/configs/: stage1_clean.yaml  stage1_smoke.yaml  stage1_tcn_gru.yaml  tmp_stage1_dual.yaml  tmp_stage1_tcn_gru.yaml
神经网络模块-最新版/data/run01/: stage1_clean_meta.json
神经网络模块-最新版/data/smoke/: stage1_clean_meta.json
神经网络模块-最新版/data/tmp_run/: stage1_clean_meta.json
神经网络模块-最新版/la_cspc_ornet/: __init__.py  datasets.py  features.py  losses.py  runtime_inference.py  stage1_common.py
神经网络模块-最新版/la_cspc_ornet/models/: factory.py  la_cspc_ornet.py  tcn_gru_baseline.py
神经网络模块-最新版/scripts/: archive_tracker_log.py  build_stage1_clean_dataset.py  check_tracker_log_schema.py  eval_control_metrics.py  eval_stage1_baselines.py  merge_tracker_logs.py  mine_stage1_subsegment.py  report_stage1_dataset.py  run_control_replay_benchmark.py  smoke_stage1_runtime.py  validate_stage1_all_segments.py  validate_stage1_segment_tag.py  visualize_stage1_segments.py  write_stage1_status_summary.py
神经网络模块/metrics/: baseline_from_existing_log.json  session_20260306_173415.json
(+28 files in other folders)
